syntax = "proto3";

import "proc/proc.proto";

option go_package = "sigmaos/uprocsrv/proto";

message RunRequest {
  ProcProto procProto = 1;
}

message RunResult {
}

message PortRequest {
  string realm = 1;
}

message PortResult {
  string ip = 1;
  string port = 2;
}

